FHG-3932 Check organisation details and skip which organisation when LA

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/AddOrganisationCheckDetails.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/AddOrganisationCheckDetails.cshtml
@@ -6,13 +6,16 @@
     Layout = "~/pages/Shared/_CheckDetailsPageLayout.cshtml";
 }
 
-@if (Model.IsAddPermissionFlow)
+@if (Model.IsDfeUser)
 {
-    @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRowModel("Local authority", Model.LocalAuthority, "LocalAuthority"))
-}
-else
-{
-    @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRowModel("Local authority", Model.LocalAuthority, "/VcsAdmin/AddOrganisationWhichLocalAuthority", "LocalAuthority"))
+    @if (Model.IsAddPermissionFlow)
+    {
+        @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRowModel("Local authority", Model.LocalAuthority, "LocalAuthority"))
+    }
+    else
+    {
+        @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRowModel("Local authority", Model.LocalAuthority, "/VcsAdmin/AddOrganisationWhichLocalAuthority", "LocalAuthority"))
+    }
 }
 
 @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRowModel("Name", Model.OrganisationName, $"/VcsAdmin/AddOrganisation?changeName=true&cacheId={Model.CacheId}", "OrganisationName"))
