Added abilty to return to the Check Details Page

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/ServiceWizzard/Pages/DetailsSaved.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/ServiceWizzard/Pages/DetailsSaved.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model FamilyHubs.ServiceDirectory.Admin.Web.Areas.ServiceWizzard.Pages.DetailsSavedModelModel
+@model FamilyHubs.ServiceDirectory.Admin.Web.Areas.ServiceWizzard.Pages.DetailsSavedModel
 @{
     ViewData["Title"] = "Details Saved";
 }
