--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/ManageOrganisations.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/ManageOrganisations.cshtml
@@ -43,7 +43,7 @@
                         {
                             <tr class="govuk-table__row">
 
-                                <td class="govuk-table__cell">@organisation.OrganisationName</td>
+                                <td class="govuk-table__cell" style="overflow-wrap: anywhere">@organisation.OrganisationName</td>
                                 <td class="govuk-table__cell">@organisation.LocalAuthority</td>
 
 
