--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/TypeOfUserLa.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/TypeOfUserLa.cshtml
@@ -1,7 +1,7 @@
 ﻿@page "{cacheid}"
 @model TypeOfUserLa
 @{
-    ViewData["Title"] = "Type of User La";
+    ViewData["Title"] = "What do they need to do?";
     Model.ErrorElementId = "LaManager";
 }
 
