--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/TypeOfUserVcs.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/TypeOfUserVcs.cshtml
@@ -1,7 +1,7 @@
 ﻿@page "{cacheId}"
 @model TypeOfUserVcs
 @{
-    ViewData["Title"] = "Type of user VCS";
+    ViewData["Title"] = "What do they need to do?";
     Model.ErrorElementId = "VcsManager";
 }
 
