FHG-4094 fix title

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/WhichLocalAuthority.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/WhichLocalAuthority.cshtml
@@ -1,7 +1,7 @@
 ﻿@page "{cacheId}"
 @model WhichLocalAuthority
 @{
-    ViewData["Title"] = "Which local authority do they work for?";
+    ViewData["Title"] = Model.PageHeading;
     Model.ErrorElementId = "LaOrganisationName";
 }
 @section Head {
