FHG-4132 Add Permission Add Org backslash error fix

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/WhichLocalAuthority.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/WhichLocalAuthority.cshtml
@@ -12,17 +12,11 @@
     <script src="~/js/accessible-autocomplete.min.js" asp-append-version="true"></script>
 
     <script>
-        let selectElement = document.querySelector('#LaOrganisationName')
-
-        function decodeHtml(html) {
-            var txt = document.createElement("textarea");
-            txt.innerHTML = html;
-            return txt.value;
-        }
-
+        let selectElement = document.querySelector('#LaOrganisationName') 
+               
         accessibleAutocomplete.enhanceSelectElement({
-            defaultValue: decodeHtml('@Model.LaOrganisationName'),
-            name: 'localAuthority',
+            defaultValue: @Json.Serialize(Model.LaOrganisationName),            
+            name: 'LaOrganisationName',
             selectElement: selectElement
         })
     </script>
