--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/AddOrganisationWhichLocalAuthority.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/AddOrganisationWhichLocalAuthority.cshtml
@@ -12,16 +12,10 @@
     <script src="~/js/accessible-autocomplete.min.js" asp-append-version="true"></script>
 
     <script>
-        let selectElement = document.querySelector('#LaOrganisationName')
-
-        function decodeHtml(html) {
-            var txt = document.createElement("textarea");
-            txt.innerHTML = html;
-            return txt.value;
-        }
+        let selectElement = document.querySelector('#LaOrganisationName')       
 
         accessibleAutocomplete.enhanceSelectElement({
-            defaultValue: decodeHtml('@Model.LaOrganisationName'),
+            defaultValue: @Json.Serialize(Model.LaOrganisationName),
             name: 'LaOrganisationName',
             selectElement: selectElement
         })
