FHG-4172 Hide not used links (#229)
* FHG-4172 Hide not used links

* add comment

---------

Co-authored-by: Witek <witek.poreda@education.gov.uk>

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Welcome.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Welcome.cshtml
@@ -35,7 +35,7 @@
                 </div>
             }
 
-            @if (Model.ShowLaSection)
+            @if (Model.ShowLaSection && false) //todo hide unused links
             {
                 <component type="typeof(Components.SectionBreakHeaderComponent)" param-Header='"Local authorities (LAs)"' render-mode="Static" />
 
@@ -82,7 +82,7 @@
                 <component type="typeof(Components.SectionBreakHeaderComponent)" param-Header='@Model.VcsHeaderText' render-mode="Static" />
 
                 <div class="cards">
-                    @if (Model.ShowVcsServiceLinks)
+                    @if (Model.ShowVcsServiceLinks && false) //todo hide unused links 
                     {
                         <div class="card">
                             <h3 class="govuk-heading-s">
