--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/WhichVcsOrganisation.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/WhichVcsOrganisation.cshtml
@@ -12,10 +12,17 @@
     <script src="~/js/accessible-autocomplete.min.js" asp-append-version="true"></script>
 
     <script>
-        let selectElement = document.querySelector('#VcsOrganisationName')
-        
+        let selectElement = document.querySelector('#VcsOrganisationName');
+
+        function getValue(val) {
+            if (val === null) {
+                return "";
+            }
+            return val;
+        }
+
         accessibleAutocomplete.enhanceSelectElement({
-            defaultValue: @Json.Serialize(Model.VcsOrganisationName),
+            defaultValue: getValue(@Json.Serialize(Model.VcsOrganisationName)),
             name: 'VcsOrganisationName',
             selectElement: selectElement
         })
