--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/styles/_global.scss
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/styles/_global.scss
@@ -2,6 +2,7 @@
 @import "patterns/cards";
 
 //Components
+//todo: should be able to remove this
 @import "../node_modules/@ministryofjustice/frontend/moj/components/add-another/add-another";
 
 //Pages
