--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_Layout.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
         window.GOVUKFrontend.initAll()
     </script>
 
-    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/app.js" asp-append-version="true"></script>
 
     @await RenderSectionAsync("Scripts", false)
 </body>
